# imxrt-hal

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  build.rs  run.bat  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml  weekly.yml
.helix/: languages.toml
board/: Cargo.toml  README.md  build.rs  memory.x
board/cfg/: boards.rs  family.rs  interrupts.rs
board/src/: imxrt1010evk.rs  imxrt1060evk.rs  imxrt1170evk-cm7.rs  imxrt1180evk-cm33.rs  lib.rs  ral_shim.rs  rt.rs  teensy4.rs  vmu-rt1170-cm7.rs
board/src/imxrt10xx/: clock.rs  clock_tree.rs  power.rs
board/src/imxrt10xx/clock_tree/: pll1_ahb.rs  pll6_ahb.rs
board/src/imxrt11xx/: clock_tree.rs
devices/: common.yaml  imxrt1011.yaml  imxrt1051.yaml  imxrt1052.yaml  imxrt1061.yaml  imxrt1062.yaml  imxrt1064.yaml
devices/common_patches/: dedup_security_config_enum.yaml
docs/: RELEASE.md
examples/: Cargo.toml  README.md  async_dma_spi.rs  async_dma_uart.rs  build.rs  hal_clock_out.rs  hal_gpio_input.rs  hal_gpt.rs  hal_i2c.rs  hal_i2c_lcd1602.rs  hal_i2c_mpu9250.rs  hal_led.rs  hal_logging.rs  hal_ocotp_fuse.rs  hal_pit.rs  hal_pwm.rs  hal_spi.rs  hal_srtc.rs  hal_tempmon.rs  hal_trng.rs  hal_uart.rs  memory.x  memory_xip.x  rtic_defmt_rtt.rs  rtic_dma_uart.rs  rtic_enet.rs  rtic_enet_dhcp.rs  rtic_enet_dhcp_tcp.rs  rtic_gpio_input.rs  rtic_gpt.rs  rtic_logging.rs  rtic_pit.rs  rtic_pwm.rs  rtic_sai_pcm5102.rs  rtic_sai_sgtl5000.rs  rtic_sai_wm8960.rs  rtic_spi.rs  rtic_spi_blocking.rs  rtic_spi_controller.rs  rtic_spi_peripheral.rs  (+5 more)
examples/ral-shim/: Cargo.toml  build.rs  shim.rs
examples/src/: imxrt1010evk.rs  lib.rs  rt.rs  teensy4.rs
imxrt-dma/: Cargo.toml  README.md
imxrt-dma/src/: channel.rs  chip.rs  element.rs  lib.rs  peripheral.rs  ral.rs
imxrt-dma/src/ral/: dma.rs  dmamux.rs  register.rs  tcd.rs
imxrt-hal/: CHANGELOG.md  Cargo.toml  Makefile  README.md
imxrt-hal/src/: adc.rs  ccm.rs  dma.rs  gpio.rs  gpt.rs  i2c.rs  iomuxc.rs  lib.rs  pit.rs  pwm.rs  spi.rs  srtc.rs  tempmon.rs  trng.rs  uart.rs
imxrt-hal/src/can/: embedded_hal.rs  filter.rs  frame.rs  mod.rs
imxrt-hal/src/can/frame/: tests.rs
imxrt-hal/src/ccm/: arm_clock.rs
imxrt-hal/src/dma/: buffer.rs  chip.rs  element.rs  memcpy.rs  peripheral.rs  register.rs
imxrt-hal/src/iomuxc/: i2c.rs  macros.rs  pin_config.rs  pwm.rs  spi.rs  uart.rs
imxrt-hal/src/iomuxc/gpio/: ad_b0.rs  ad_b1.rs  b0.rs  b1.rs  emc.rs  sd_b0.rs  sd_b1.rs
imxrt-iomuxc/: Cargo.toml  README.md  build.rs  daisy.py
imxrt-iomuxc/imxrt-iomuxc-build/: Cargo.toml
imxrt-iomuxc/imxrt-iomuxc-build/src/: lib.rs
imxrt-iomuxc/imxrt-iomuxc-build/tests/: write_impl_gpio_pins.rs  write_pads.rs
imxrt-iomuxc/imxrt106x-iomuxc/: Cargo.toml  build.rs
imxrt-iomuxc/imxrt106x-iomuxc/src/: i2c.rs  lib.rs  pwm.rs  spi.rs  uart.rs
imxrt-iomuxc/src/: adc.rs  config.rs  i2c.rs  lib.rs  pwm.rs  spi.rs  uart.rs
imxrt-iomuxc/src/imxrt1010/: mod.rs  spi.rs
imxrt-iomuxc/src/imxrt101x/: i2c.rs  mod.rs  uart.rs
imxrt-iomuxc/src/imxrt1060/: i2c.rs  mod.rs  pwm.rs  spi.rs
imxrt-iomuxc/src/imxrt106x/: adc.rs  mod.rs  uart.rs
imxrt-iomuxc/tests/: prelude.rs
imxrt-ral/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  imxrtral.py
imxrt-ral/devices/: imxrt1011.yaml  imxrt1015.yaml  imxrt1021.yaml  imxrt1051.yaml  imxrt1052.yaml  imxrt1061.yaml  imxrt1062.yaml  imxrt1064.yaml
imxrt-ral/devices/common_patches/: dedup_security_config_enum.yaml
imxrt-ral/src/: lib.rs  register.rs
imxrt-ral/src/cortex_m/: mod.rs
imxrt-ral/src/imxrt/: mod.rs
imxrt-ral/src/imxrt101/: mod.rs
imxrt-ral/src/imxrt102/: mod.rs
imxrt-ral/src/imxrt105/: mod.rs
imxrt-ral/src/imxrt106/: mod.rs
imxrt1011/: Cargo.toml  README.md  device.x
imxrt1015/: Cargo.toml  README.md  device.x
imxrt1021/: Cargo.toml  README.md  device.x
imxrt1051/: Cargo.toml  README.md  build.rs  device.x
imxrt1052/: Cargo.toml  README.md  device.x
imxrt1060-hal/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
imxrt1060-hal/src/: adc.rs  ccm.rs  dma.rs  gpio.rs  gpt.rs  i2c.rs  lib.rs  pit.rs  pwm.rs  spi.rs  srtc.rs  trng.rs  uart.rs
imxrt1060-hal/src/dma/: buffer.rs  memcpy.rs  peripheral.rs
imxrt1061/: Cargo.toml  README.md  device.x
imxrt1062/: README.md
imxrt1062-hal/: Cargo.toml
imxrt1062-hal/src/: adc.rs  gpt.rs  i2c.rs  lib.rs  spi.rs  uart.rs
imxrt1062-hal/src/dma/: chip.rs  peripheral.rs  register.rs
imxrt1064/: Cargo.toml  README.md
logging/: CHANGELOG.md  Cargo.toml  README.md  build.rs
logging/src/: defmt.rs  lib.rs  log.rs  lpuart.rs  usbd.rs
logging/src/log/: filters.rs  frontend.rs
src/: chip.rs  dma.rs  gpio.rs  lib.rs  lpi2c.rs  lpuart.rs  timer.rs
src/ccm/: README.md  clock_gate.rs  common.rs  periph_clk2_sel.rs  pre_periph_clk_pll6.rs
src/ccm/clock_tree/: README.md  pll6_ahb.rs
src/chip/: dma.rs  imxrt1010.rs  imxrt1020.rs  imxrt1060.rs  imxrt10xx.rs  imxrt1170.rs  imxrt1180.rs  imxrt11xx.rs  none.rs  ocotp.rs  snvs.rs  timer.rs  usbd.rs
src/chip/ccm/: analog.rs  arm_divider.rs  clock_gate.rs  clock_tree.rs  common.rs  output_source.rs
src/chip/drivers/: adc.rs  ccm_10xx.rs  ccm_118x.rs  ccm_11xx.rs  dcdc.rs  dma.rs  gpio.rs  iomuxc_10xx.rs  ocotp.rs  ocotp_10xx.rs  ocotp_11xx.rs  pit.rs  rgpio.rs  sai.rs  tempmon.rs  timer.rs  trng.rs
src/chip/imxrt10xx/: adc.rs  ccm.rs  imxrt1010.rs  imxrt1020.rs  imxrt1050.rs  imxrt1060.rs  sai.rs  tempmon.rs  trng.rs
src/chip/imxrt11xx/: ccm.rs  gpc.rs  imxrt1170.rs  pmu.rs
src/chip/usbd/: one_two.rs  singleton.rs
src/common/: adc.rs  ccm.rs  dma.rs  flexpwm.rs  gpio.rs  gpt.rs  lpi2c.rs  lpspi.rs  lpspi_old.rs  lpuart.rs  pit.rs  sai.rs  snvs.rs  timer.rs  trng.rs  usbd.rs
src/common/can/: embedded_hal.rs  filter.rs  frame.rs  id.rs  mod.rs
src/common/dma/: channel.rs  element.rs  (+5 more)
src/imxrt10xx/: adc.rs  ccm.rs  dma.rs  lpi2c.rs  tempmon.rs  trng.rs
src/imxrt11xx/: ccm.rs  imxrt1170.rs  usbphy.rs
svd/: README.md
tests/: 1010_trace_clk_rename.rs
tools/: Cargo.toml
tools/src/: lib.rs  main.rs
(+749 files in other folders)
