[package]
name = "imxrt-hal"
authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre <ianpmcintyre@gmail.com>"]
description = """
Hardware abstraction layer for NXP i.MX RT microcontrollers.
"""
repository = "https://github.com/imxrt-rs/imxrt-hal"
readme = "README.md"
keywords = ["imxrt", "nxp", "embedded", "no_std", "embedded-hal"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2018"
version = "0.5.0-alpha"

[dependencies.cortex-m]
version = "0.7"

[dependencies.cfg-if]
version = "1.0"

[dependencies.bitflags]
version = "1.2"

[dependencies.nb]
version = "1"

[dependencies.eh02]
package = "embedded-hal"
version = "0.2"

[dependencies.eh1]
package = "embedded-hal"
version = "=1.0.0-alpha.5"

[dependencies.rand_core]
version = "0.5"
default-features = false
optional = true

[dev-dependencies.pin-utils]
version = "0.1"

#######################
# imxrt-rs dependencies
#######################

[dependencies.imxrt-iomuxc]
version = "0.2"
path = "../iomuxc"

[dependencies.imxrt-ral]
version = "0.5"
path = "../ral"

[dependencies.imxrt-usbd]
version = "0.1"
path = "../usbd"
optional = true

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
features = ["imxrt-ral/imxrt1062"]

######################
# Chip family features
######################

[features]
default = ["imxrt-usbd"]
imxrt1010 = ["imxrt-iomuxc/imxrt1010"]
imxrt1060 = ["imxrt-iomuxc/imxrt1060"]
imxrt1064 = ["imxrt-iomuxc/imxrt1060"]

################
# Extra features
################

# Enable implementations for EH02 "unproven" traits.
# Requires the EH02 "unproven" feature.
eh02-unproven = []

[workspace]
members = [
    "board",
    "logging",
    "tools",
]

[patch.crates-io.cortex-m-rt]
path = "../../cortex-m/cortex-m-rt"

[patch.crates-io.bbqueue]
path = "../../bbqueue/core"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release.build-override]
opt-level = 0
codegen-units = 256

######################################
# Configurations for hardware examples
######################################

[dev-dependencies]
board = { path = "board" }
cortex-m-rt = { version = "0.7", features = [
    "device",
    "set-vtor",
    "region-alias",
]}
menu = "0.3.2"
cortex-m-rtic = { version = "1.0" }
imxrt-ral = { features = ["rtic"], path = "../ral" }
log = "0.4"
defmt = "0.3"
imxrt-log = { path = "logging" }

[[example]]
name = "hal_spi"
required-features = ["board/spi"]

[[example]]
name = "rtic_spi"
required-features = ["board/spi"]
