[package]
name = "imxrt-hal"
authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre <ianpmcintyre@gmail.com>"]
description = """
Hardware abstraction layer for NXP i.MX RT microcontrollers.
"""
readme = "README.md"
repository = { workspace  = true }
keywords = { workspace  = true }
categories = { workspace  = true }
license = { workspace  = true }
edition = { workspace = true }
version = "0.5.2"

[dependencies.cfg-if]
version = "1.0"

[dependencies.bitflags]
version = "1.2"

[dependencies.fugit]
version = "0.3"

# For EH02 CountDown.
[dependencies.void]
version = "1"
default-features = false

[dependencies.nb]
version = "1"

[dependencies.eh02]
package = "embedded-hal"
version = "0.2"

[dependencies.rand_core]
version = "0.5"
default-features = false
optional = true

#######################
# imxrt-rs dependencies
#######################

[dependencies.imxrt-dma]
workspace = true

[dependencies.imxrt-iomuxc]
workspace = true

[dependencies.imxrt-ral]
workspace = true

[dependencies.imxrt-usbd]
workspace = true
optional = true

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
features = ["imxrt-ral/imxrt1062", "imxrt1060"]

###############
# Chip features
###############

[features]
default = ["imxrt-usbd"]
imxrt1010 = ["imxrt-iomuxc/imxrt1010"]
imxrt1020 = ["imxrt-iomuxc/imxrt1020"]
imxrt1060 = ["imxrt-iomuxc/imxrt1060"]
imxrt1064 = ["imxrt-iomuxc/imxrt1060"]
imxrt1170 = ["imxrt-iomuxc/imxrt1170"]

################
# Extra features
################

# Enable implementations for EH02 "unproven" traits.
# Requires the EH02 "unproven" feature.
eh02-unproven = []

[workspace]
members = [
    "board",
    "logging",
]

[workspace.dependencies]
imxrt-dma = "0.1"
imxrt-iomuxc = "0.2.1"
imxrt-hal = { version = "0.5", path = "." }
imxrt-log = { path = "logging" }
imxrt-ral = "0.5"
imxrt-rt = "0.1"
imxrt-usbd = "0.2"

[workspace.package]
repository = "https://github.com/imxrt-rs/imxrt-hal"
keywords = ["imxrt", "nxp", "embedded", "no_std", "embedded-hal"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release.build-override]
opt-level = 0
codegen-units = 256

######################################
# Configurations for hardware examples
######################################

[dev-dependencies]
cortex-m = "0.7"
imxrt-rt = { workspace = true }
menu = "0.3.2"
cortex-m-rtic = "1.0"
log = "0.4"
defmt = "0.3"
pin-utils = "0.1"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
board = { path = "board" }

[[example]]
name = "async_dma_spi"
required-features = ["board/spi"]

[[example]]
name = "hal_spi"
required-features = ["board/spi"]

[[example]]
name = "rtic_spi"
required-features = ["board/spi"]

[[example]]
name = "hal_logging"
required-features = ["board/imxrt-log"]

[[example]]
name = "hal_tempmon"
required-features = ["board/imxrt-log"]

[[example]]
name = "hal_trng"
required-features = ["board/imxrt-log"]

[[example]]
name = "rtic_logging"
required-features = ["board/imxrt-log"]

[[example]]
name = "hal_i2c_lcd1602"
required-features = ["board/lcd1602"]
