[package]
name = "imxrt-hal-examples"
version = "0.1.0"
edition = "2021"
# Only for testing, documentation.
publish = false

[lib]
name = "board"

[dependencies.imxrt-hal]
path = ".."
version = "0.5.0-alpha"

[dependencies.imxrt-iomuxc]
version = "0.2"
path = "../../iomuxc"

[dependencies.imxrt-ral]
version = "0.5"
path = "../../ral"
features = ["rt"]

[dependencies.cortex-m]
version = "0.7"

[dependencies.cortex-m-rt]
version = "0.7"
features = [
    "device",
    "set-vtor",
    "region-alias",
]

[dependencies.cortex-m-rtic]
version = "1.0"
optional = true

[dependencies.embedded-hal]
version = "=1.0.0-alpha.5"

# Use existing FCB, instead of defining inline.
[target.thumbv7em-none-eabihf.dependencies.teensy4-fcb]
optional = true
version = "0.3"

[target.thumbv7em-none-eabihf.dependencies.teensy4-panic]
optional = true
version = "0.2"

# Other boards may choose to define their FCB inline.
[dependencies.imxrt-boot-gen]
optional = true
version = "0.2"

[dependencies.menu]
version = "0.3.2"

[target.thumbv7em-none-eabihf.dependencies.rtt-target]
version = "0.3"
optional = true
features = ["cortex-m"]

[target.thumbv7em-none-eabihf.dependencies.panic-rtt-target]
version = "0.1"
optional = true
features = ["cortex-m"]

[features]
imxrt1010evk = [
    "imxrt-iomuxc/imxrt1010",
    "imxrt-ral/imxrt1011",
    "imxrt-hal/imxrt1010",
    "imxrt-boot-gen/imxrt1010",
    "rtt-target",
    "panic-rtt-target",
]
teensy4 = [
    "imxrt-iomuxc/imxrt1060",
    "imxrt-ral/imxrt1062",
    "imxrt-hal/imxrt1060",
    "teensy4-fcb",
    "teensy4-panic",
]
rtic = ["cortex-m-rtic", "imxrt-ral/rtic"]
# Some boards (Teensy 4) require a resource
# configuration to enable the (easily accessible)
# SPI peripheral. Turn on this feature to activate
# the SPI peripheral.
#
# See board-specific documentation for its effects.
board-spi = []

[[bin]]
name = "hal_spi"
required-features = ["board-spi"]

[[bin]]
name = "rtic_dma_uart"
required-features = ["rtic"]

[[bin]]
name = "rtic_gpt"
required-features = ["rtic"]

[[bin]]
name = "rtic_pit"
required-features = ["rtic"]

[[bin]]
name = "rtic_spi"
required-features = ["board-spi", "rtic"]

[[bin]]
name = "rtic_uart"
required-features = ["rtic"]
