[package]
name = "imxrt-hal"
authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre"]
description = "Hardware abstraction layer for all NXP i.MX RT microcontrollers"
repository = "https://github.com/imxrt-rs/imxrt-rs"
documentation = "https://docs.rs/imxrt"
readme = "README.md"
keywords = ["imxrt", "nxp", "embedded", "no_std"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"
version = "0.1.0"


[dependencies]
imxrt-ral = { version = "0.1.0", path = "../imxrt-ral" }
bitflags = "1.2.1"
embedded-hal = "0.2.3"
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }
log = "0.4.8"

[lib]
bench = false
test = false

[features]
default = ["embedded-hal/unproven"] # Allows us to access the new digital pin traits
