[package]
name = "imxrt-hal"
authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre <ianpmcintyre@gmail.com>"]
description = "Hardware abstraction layer for all NXP i.MX RT microcontrollers"
repository = "https://github.com/imxrt-rs/imxrt-rs"
documentation = "https://docs.rs/imxrt"
readme = "README.md"
keywords = ["imxrt", "nxp", "embedded", "no_std"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"
version = "0.2.1"


[dependencies]
cortex-m = { version = "0.6" }
imxrt-ral = "0.2.1"
bitflags = "1.2.1"
embedded-hal = "0.2.3"
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }
log = "0.4.8"

[lib]
bench = false
test = false

[features]
default = ["embedded-hal/unproven"] # Allows us to access the new digital pin traits

# Device specific feature flags
# these need fixes and conditional sections in CCM
#imxrt1011 = ["imxrt-ral/imxrt1011"]
#imxrt1015 = ["imxrt-ral/imxrt1015"]
#imxrt1021 = ["imxrt-ral/imxrt1021"]
#imxrt1051 = ["imxrt-ral/imxrt1051"]
#imxrt1052 = ["imxrt-ral/imxrt1052"]
#imxrt1061 = ["imxrt-ral/imxrt1061"]
imxrt1062 = ["imxrt-ral/imxrt1062"]
#imxrt1064 = ["imxrt-ral/imxrt1064"]
rtfm = ["imxrt-ral/rtfm"]
rt = ["imxrt-ral/rt"]
nosync = ["imxrt-ral/nosync"]
