[package]
name = "imxrt-hal"
authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre <ianpmcintyre@gmail.com>"]
description = "Hardware abstraction layer for all NXP i.MX RT microcontrollers"
repository = "https://github.com/imxrt-rs/imxrt-rs"
readme = "README.md"
keywords = ["imxrt", "nxp", "embedded", "no_std"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"
version = "0.4.4"

[dependencies]
as-slice = "0.1.3"
cortex-m = { version = "0.6" }
imxrt-ral = "0.4.0"
bitflags = "1.2.1"
embedded-hal = "0.2.3"
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }
log = "0.4.8"
rand_core = { version = "0.5", default-features = false, optional = true }

[dependencies.imxrt-iomuxc]
version = "0.1.2"
git = "https://github.com/imxrt-rs/imxrt-iomuxc.git"
branch = "v0.1"

[dev-dependencies.cortex-m-rt]
version = "0.6"
features = ["device"]

[lib]
bench = false

[features]
default = ["embedded-hal/unproven"] # Allows us to access the new digital pin traits

# Device specific feature flags
# these need fixes and conditional sections in CCM
#imxrt1011 = ["imxrt-ral/imxrt1011"]
#imxrt1015 = ["imxrt-ral/imxrt1015"]
#imxrt1021 = ["imxrt-ral/imxrt1021"]
#imxrt1051 = ["imxrt-ral/imxrt1051"]
#imxrt1052 = ["imxrt-ral/imxrt1052"]
imxrt1061 = ["imxrt-ral/imxrt1061", "imxrt-iomuxc/imxrt106x"]
imxrt1062 = ["imxrt-ral/imxrt1062", "imxrt-iomuxc/imxrt106x"]
imxrt1064 = ["imxrt-ral/imxrt1064", "imxrt-iomuxc/imxrt106x"]
rtic = ["imxrt-ral/rtic"]
rt = ["imxrt-ral/rt"]
nosync = ["imxrt-ral/nosync"]

[package.metadata.docs.rs]
features = ["imxrt1062"]
