[package]
authors = ["Tom Burdick <tom.burdick@electromatic.us>"]
edition = "2018"
readme = "README.md"
name = "imxrt1061"
version = "0.1.0"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.6"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
cortex-m-rt = "0.6.10"

[features]
rt = ["cortex-m-rt/device"]
