[package]
name = "imxrt1060-hal"
authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre <ianpmcintyre@gmail.com>"]
description = """
Hardware abstraction layer for NXP i.MX RT 1060 microcontrollers, including

- i.MX RT 1061
- i.MX RT 1062
"""
repository = "https://github.com/imxrt-rs/imxrt-rs"
readme = "README.md"
keywords = ["imxrt", "nxp", "embedded", "no_std"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"
version = "0.5.0-alpha"

[dependencies]
as-slice = "0.1.3"
cortex-m = { version = "0.6" }
bitflags = "1.2.1"
embedded-hal = "0.2.3"
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }
log = "0.4.8"

[dependencies.imxrt-ral]
version = "0.4.0"
path = "../imxrt-ral"
features = ["imxrt1062"]

[dependencies.imxrt-iomuxc]
version = "0.1.0"
path = "../imxrt-iomuxc"
features = ["imxrt1060"]

[lib]
bench = false

[features]
default = ["embedded-hal/unproven"] # Allows us to access the new digital pin traits
rtic = ["imxrt-ral/rtic"]
rt = ["imxrt-ral/rt"]
nosync = ["imxrt-ral/nosync"]
