[package]
name = "imxrt-log"
version = "0.1.0"
edition = "2021"
description = "Logging extensions for i.MX RT processors."
repository = { workspace  = true }
keywords = { workspace  = true }
categories = { workspace  = true }
license = { workspace  = true }

[dependencies]
cortex-m = "0.7"
bbqueue = "0.5"

[dependencies.defmt]
optional = true
version = "0.3"

[dependencies.log]
optional = true
version = "0.4"

[dependencies.usb-device]
optional = true
version = "0.2"

[dependencies.usbd-serial]
optional = true
version = "0.1"

[dependencies.imxrt-hal]
optional = true
workspace = true

[dependencies.imxrt-usbd]
optional = true
workspace = true

[features]
default = ["defmt", "log", "lpuart", "usbd"]
lpuart = ["dep:imxrt-hal"]
usbd = ["dep:imxrt-usbd", "dep:usb-device", "dep:usbd-serial"]

# Development dependency allows you to build
# this crate and specify a RAL feature flag
# for the HAL.
[dev-dependencies.imxrt-ral]
workspace = true
features = ["rt"]

[dev-dependencies.cortex-m-rt]
version = "0.7"
features = ["device"]
