[package]
name = "imxrt-ral-shim"
version = "0.1.0"
edition = "2021"
# Only for testing, documentation.
publish = false

[dependencies.imxrt-ral]
version = "0.5"
path = "../../../ral"
features = ["rt"]

[dependencies.cortex-m]
version = "0.7"

[lib]
name = "imxrt_ral"
path = "shim.rs"

[features]
imxrt1010evk = []
teensy4 = []
